# fastserial-rs

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  package-lock.json  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  publish.yml
.husky/: pre-commit
api-bench/: Cargo.toml
api-bench/jsondata/: batch_products.json  batch_users.json  blog_post.json  complex_product.json  nested_order.json  simple_user.json
api-bench/reports/: 10_20260420_164545.html  10_20260420_164545.json  5000_20260420_164729.html  5000_20260420_164729.json  5000_20260420_164747.html  5000_20260420_164747.json
api-bench/src/: main.rs
api-bench/src/handlers/: mod.rs
api-bench/src/models/: mod.rs
benches/: binary_throughput.rs  full_comparison.rs  json_throughput.rs
benches/fixtures/: sample.json  twitter.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CODEGEN.md  FORMATS.md  SIMD.md
examples/: basic_usage.rs  benchmark.rs  binary_format.rs  derive_attributes.rs
fastserial-derive/: Cargo.toml  README.md
fastserial-derive/src/: decode.rs  encode.rs  lib.rs
sample-axum/: Cargo.toml  README.md
sample-axum/src/: error.rs  fastjson.rs  main.rs
sample-axum/src/auth/: mod.rs
sample-axum/src/db/: mod.rs  schema.rs  seeds.rs
sample-axum/src/handlers/: category.rs  post.rs  user.rs
sample-axum/src/models/: category.rs  mod.rs  post.rs  response.rs  user.rs
sample-axum/src/routes/: category.rs  post.rs  user.rs
skills/: DECODE_SKILL.md  ENCODE_SKILL.md  FORMAT_SKILL.md  SIMD_SKILL.md  SKILL.md
src/: arena.rs  error.rs  format.rs  lib.rs  value.rs
src/codec/: binary.rs  json.rs  mod.rs  msgpack.rs
src/io/: mod.rs
src/schema/: mod.rs  types.rs  validate.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse42.rs
tests/: attribute_tests.rs  binary_comprehensive.rs  binary_test.rs  derive_struct_tests.rs  edge_cases.rs  error_handling.rs  io_buffer_tests.rs  json_codec_tests.rs  nested.rs  numeric_extremes.rs  roundtrip.rs  schema_tests.rs  serialization_test.rs  simd_boundary.rs  simd_tests.rs  unicode.rs  zero_copy.rs
