[package]
name = "api-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
fastserial = { path = "..", features = ["json", "binary", "std", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "server"
path = "src/main.rs"