[package]
name = "sample-axum"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
fastserial = { path = "..", features = ["json", "binary", "std", "chrono"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.19"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
reqwest = "0.12"
serde_json = "1"

[[bin]]
name = "server"
path = "src/main.rs"